# fractal_sdl

./: .clang-format  CMakeLists.txt  README.md
src/: CApp.cpp  CApp.hpp  Global.cpp  Global.hpp  fractal.hpp  main.cpp
